css/Dark-light-switch.css
body.dark {background: #222222;}
body.dark .bg-primary {background: #FFFFFF !important;}
body.dark h1, body.dark h2, body.dark h3, body.dark .support a {color: #fff;}
body.dark .navbar-dark .navbar-brand, body.dark .navbar-dark .navbar-nav .nav-link {color:#000000}
body.dark .navbar-dark .navbar-toggler-icon {filter: invert(100)!important;}
body.dark .close-icon.py-1 {visibility: hidden;}

.checkbox {
  opacity: 0;
  position: absolute;
}

.switch {
    margin:0 auto;
    text-align: center;
    display: inline-block;
    padding-top:50px;
}

.checkbox-label {
  background-color: #111;
  width: 50px;
  height: 26px;
  border-radius: 50px;
  position: relative;
  padding: 5px;
  cursor: pointer;
  display: flex;
  justify-content: space-between;
}

.fa-moon {color: #f1c40f;}

.fa-sun {color: #f39c12;}

.checkbox-label .ball {
  background-color: #fff;
  width: 22px;
  height: 22px;
  position: absolute;
  left: 2px;
  top: 2px;
  border-radius: 50%;
  transition: transform 0.2s linear;
}

.checkbox:checked + .checkbox-label .ball {
  transform: translateX(24px);
}

